--- a/assets/scss/base/_index.scss
+++ b/assets/scss/base/_index.scss
@@ -26,7 +26,7 @@ ol, ul, li {
   list-style: none;
 }
 a {
-  color: inherit;
+  color: #34649b;
   outline: none;
   &:hover {
     color: inherit;
